Fix product images to show full image instead of cropped version

--- a/src/components/ImageGallery.css
+++ b/src/components/ImageGallery.css
@@ -18,7 +18,7 @@
 .main-image {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 .image-gallery-thumbnails {
